# azure-storage-mcp

./: CLAUDE.md  COMMANDS.md  Containerfile  INITIAL.md  README.md  pyproject.toml
.github/workflows/: build-container.yml  test-linux.yml  test-windows.yml
instructions/: ADD-PODMAN.md  TEST-WORKFLOWS.md
plans/: technical_implementation_plan.md
scripts/: demo.py  dev.sh  test.sh
src/azure_storage_mcp/: __init__.py  server.py
src/azure_storage_mcp/auth/: __init__.py  azure_auth.py
src/azure_storage_mcp/models/: __init__.py  metrics.py  network_rules.py  storage_account.py
src/azure_storage_mcp/tools/: __init__.py  metrics.py  network_rules.py  storage_accounts.py
src/azure_storage_mcp/utils/: __init__.py  exceptions.py  logging.py
tests/: conftest.py  test_server.py
